Fixes empty homepage title, fixes missing background, adds sitename to other titles

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,6 +1,6 @@
 body {
 	font-family: "gentonalight", "Georgia", serif !important;
-	background: #faf8f1 url("bg-texture.png") !important;
+	background: #faf8f1 url("images/bg-texture.png") !important;
 	color: #333132 !important;
 }
 body a {
